--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -31,7 +31,7 @@
             margin: 0;
         }
 
-        img :not(.paraiso) {
+        img{
             max-width: 100%;
             height: auto;
 
@@ -374,7 +374,7 @@
             margin-top: 30px;
             display: grid;
             grid-template-columns: 50% 50%;
-            column-gap: 2px;
+            column-gap: 5px;
         }
 
         .side3>div:nth-child(2),
@@ -775,6 +775,7 @@
                 <div class="content content3">
                     <div class="side side3">
                         <div>
+                            <div><img src="images/sec3-1.jpg" alt="sec1" ></div>
                             <div><img src="images/sec3-2.avif" alt="sec2"></div>
                             <div><img src="images/sec3-3.avif" alt="sec3"></div>
                             <div><img src="images/sec3-4.avif" alt="sec4"></div>
@@ -782,7 +783,7 @@
                             <div><img src="images/sec3-6.avif" alt="sec6"></div>
                         </div>
                         <div>
-                            <img src="images/sec3-1.jpg" alt="sec3-1">
+                            <img src="images/sec3-main.jpg" alt="sec3-1">
                         </div>
 
                     </div>
