--- a/tour-list.html
+++ b/tour-list.html
@@ -446,10 +446,10 @@
         </div>
         <ul class="nav">
             <div>
-                <li><a href="index.html">home page</a></li>
-                <li><a href="destination.html">destination</a></li>
-                <li><a href="private-tour.html">private tour</a></li>
-                <li><a href="single-tour-page.html">single tour</a></li>
+                <li><a href="index.html"target="blank">home page</a></li>
+                <li><a href="destination.html" target="blank">destination</a></li>
+                <li><a href="private-tour.html"target="blank">private tour</a></li>
+                <li><a href="single-tour-page.html"target="blank">single tour</a></li>
             </div>
         </ul>
     </header>
