slider width adjustment

--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -320,11 +320,13 @@
 
         #desc:checked~nav .slider {
             left: 25%;
+            width:10%;
             font-weight: bold;
         }
 
         #gal:checked~nav .slider {
             left: 50%;
+            width: 8%;
             font-weight: bold;
         }
 
@@ -374,7 +376,7 @@
             margin-top: 30px;
             display: grid;
             grid-template-columns: 50% 50%;
-            column-gap: 5px;
+            
         }
 
         .side3>div:nth-child(2),
