--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -376,6 +376,8 @@
             margin-top: 30px;
             display: grid;
             grid-template-columns: 50% 50%;
+            column-gap: 2px;
+            row-gap: 1px;
             
         }
 
@@ -777,12 +779,12 @@
                 <div class="content content3">
                     <div class="side side3">
                         <div>
-                            <div><img src="images/sec3-1.jpg" alt="sec1" ></div>
-                            <div><img src="images/sec3-2.avif" alt="sec2"></div>
-                            <div><img src="images/sec3-3.avif" alt="sec3"></div>
-                            <div><img src="images/sec3-4.avif" alt="sec4"></div>
-                            <div><img src="images/sec3-5.avif" alt="sec5"></div>
-                            <div><img src="images/sec3-6.avif" alt="sec6"></div>
+                            <div><img src="images/sec3-1.webp" alt="sec1" ></div>
+                            <div><img src="images/sec3-2.webp" alt="sec2"></div>
+                            <div><img src="images/sec3-3.webp" alt="sec3"></div>
+                            <div><img src="images/sec3-4.webp" alt="sec4"></div>
+                            <div><img src="images/sec3-5.webp" alt="sec5"></div>
+                            <div><img src="images/sec3-6.webp" alt="sec6"></div>
                         </div>
                         <div>
                             <img src="images/sec3-main.jpg" alt="sec3-1">
