--- a/private-tour.html
+++ b/private-tour.html
@@ -25,7 +25,6 @@
             margin: 0;
         }
 
-
         header {
             position: sticky;
             top: 0;
@@ -33,23 +32,92 @@
             background-color: white;
         }
 
-        .row1 {
-            width: 80%;
-            margin: auto;
-            display: grid;
-            grid-template-columns: auto auto auto;
-            justify-content: space-between;
-            padding: 20px;
-        }
-
         a {
             text-decoration: none;
             cursor: pointer;
             font-variant: small-caps;
-            font-family: funer;
+            /* font-family: funer; */
             padding: 0px 20px;
         }
 
+        #tap1,
+        #tap2 {
+            display: none;
+        }
+
+        label[for="tap2"] {
+            display: none;
+        }
+
+        #tap1:checked~div label[for="tap2"] {
+            position: absolute;
+            display: block;
+            left: 5px;
+            top: -23px;
+            font-size: 1.9rem;
+        }
+
+        #tap1:checked~div label[for="tap1"] {
+            display: none;
+        }
+
+        label[for="tap1"],
+        label[for="tap2"] {
+            cursor: pointer;
+        }
+
+
+        #tap1:checked~.nav {
+            display: block;
+        }
+
+        .main-head {
+            width: 80%;
+            margin: auto;
+            display: flex;
+            justify-content: space-between;
+            padding: 20px 0;
+            text-align: center;
+            align-items: center;
+        }
+
+        .main-head a {
+            text-decoration: none;
+            border: #9bcd52 1px solid;
+            padding: 12px 20px;
+            color: #4b5b34;
+            font-weight: 700;
+            font-size: 0.8rem;
+        }
+
+        .main-head a:hover {
+            color: #4b5b34;
+            ;
+        }
+
+        .main-head>div {
+            width: 30%;
+        }
+
+        .main-head>.left div {
+            position: relative;
+            margin: auto;
+            color: black;
+            font-size: 2.2em;
+            text-align: left;
+        }
+
+        .main-head>.right div {
+            text-align: right;
+        }
+
+        .main-head>.right div {
+            margin: auto;
+            color: black;
+            font-size: 1.6rem;
+            margin: 0 0 12px 70px;
+
+        }
         .nav {
             list-style: none;
             background-color: rgb(162 205 93);
@@ -72,95 +140,12 @@
             border-radius: 50%;
             font-weight: 400;
             font-size: 1.3rem;
-            font-family: sans-serif;
         }
 
         .nav a:hover {
-            /* background-color: rgb(152, 196, 82); */
-            color: azure;
+            color: white;
         }
 
-        #open,
-        #exit {
-            visibility: hidden;
-            position: absolute;
-        }
-
-        #open:checked~.row1 label[for="open"],
-        label[for="exit"] {
-            display: none;
-        }
-
-        #open:checked~.row1 label[for="exit"],
-        #open:checked~.nav {
-            display: block;
-        }
-
-        label[for="open"] {
-            cursor: pointer;
-            font-size: 2rem;
-            margin: 10px;
-        }
-
-        label[for="exit"] {
-            cursor: pointer;
-            font-size: 1.5rem;
-        }
-
-        /* .call>{
-            border: rgb(162 205 93) 1px solid;
-            background-color: white;
-            font-weight: 600;
-            color: rgb(100 78 60);
-            padding: 10px;
-        } */
-        .call>button {
-            margin: 10px;
-            padding: 8px;
-            color: #644e3c;
-            background-color: white;
-            border: solid 1px yellowgreen;
-
-        }
-
-        .row1 button:hover {
-            background-color: rgba(0, 0, 0, 0.10);
-        }
-
-        /* .container1 {
-            width: 100%;
-            display: grid;
-            grid-template-columns: 33% 33% 33%;
-            align-items: center;
-            background-color: white;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .container1 button:hover {
-            background-color: rgba(99, 93, 93, 0.4);
-        }
-        .left {
-            padding: 14px;
-        }
-
-        .container1>:nth-child(3) {
-            text-align: right;
-            padding: 5px;
-        }
-
-        .right button {
-            border: solid 1px yellowgreen;
-            color: #644d3b;
-            background-color: white;
-            padding: 10px;
-        }
-
-        .left>div>button {
-            border: 0;
-            background-color: white;
-            font-size: 30px;
-        } */
 
         .boat {
             background-image: url(images/boat.webp);
@@ -624,20 +609,21 @@
             gap: 9px;
         }
 
+        .fee>i+img {
+            padding: 0 0 0 3px;
+            margin: 5px;
+        }
+
         #footer {
             background-color: #4b5b34;
             color: white;
         }
 
         @media screen and (max-width:576px) {
-
             /* .container1 {
                 width: 100%;
                 grid-template-columns: 20% 40% 38%;
             } */
-            .row1 {
-                grid-template-columns: 20% 45% 38%;
-            }
 
             .nav>div {
                 grid-template-columns: repeat(2, 1fr);
@@ -741,22 +727,11 @@
         }
 
         @media screen and (max-width:320px) {
-
             /* .foot{
                 margin: 0;
                 overflow: hidden;
             } */
-            .row1 {
-                width: 100%;
-                grid-template-columns: 100%;
-                gap: 20px;
-                padding: 40px;
-                width: 100%;
-            }
 
-            .row1>a {
-                padding: 0;
-            }
 
             .nature {
                 width: 100%;
@@ -797,42 +772,31 @@
 
 <body>
     <header>
-        <!-- <div class="container1">
+        <input type="radio" id="tap1" name="sk">
+        <input type="radio" id="tap2" name="sk">
+        <div class="main-head">
             <div class="left">
-                <div><button id="three-dot">&#x2630</button></div>
+                <div>
+                    <label for="tap1">
+                        &#x2630
+                    </label>
+                    <label for="tap2">
+                        <i class="fa-solid fa-x"></i>
+                    </label>
+                </div>
             </div>
             <div class="middle">
-                <img src="images/logoETB-1.webp" alt="">
+                <div><img src="images/logoETB-1.webp" alt=""></div>
             </div>
             <div class="right">
-                <button>
-                    <i class="fa-solid fa-phone"></i> GET IN TOUCH
-                </button>
-            </div>
-        </div> -->
-        <input type="radio" id="open" name="v1">
-        <input type="radio" id="exit" name="v1">
-        <div class="row1 box">
-            <div>
-                <label for="open">
-                    &#x2630
-                </label>
-                <label for="exit">
-                    <i class="fa-solid fa-x"></i>
-                </label>
-            </div>
-            <div>
-                <img src="images/logoETB-1.webp" alt="">
-            </div>
-            <div class="call">
-                <button><i class="fa-solid fa-phone"></i>&emsp;GET IN TOUCH</button>
+                <div><a href="#telephone"><i class="fa-solid fa-phone"></i>&emsp;GET IN TOUCH</a></div>
             </div>
         </div>
         <ul class="nav">
             <div>
                 <li><a href="index.html">home page</a></li>
-                <li><a href="destination.html">destination</a></li>
-                <li><a href="tour-list-expand.html">tour list</a></li>
+                <li><a href="private-tour.html">private tours</a></li>
+                <li><a href="tour-expand.html">tour list</a></li>
                 <li><a href="single-tour-page.html">single tour</a></li>
             </div>
         </ul>
