--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -586,7 +586,7 @@
     <input type="radio" id="open" name="v1">
     <input type="radio" id="exit" name="v1">
     <header>
-        <div class="container">
+        <div class="container1">
             <div class="row1">
                 <div>
 
