--- a/ecotour.html
+++ b/ecotour.html
@@ -295,13 +295,13 @@ margin-top: 50px;
         <div class="row3" >
             <div class="row4">
             <a href="Index.html" style="color:black;">HOME</a>
-            <a href="destination"style="color:black;"> DESTINATION</a>
-            <a href="private tour"style="color:black;">PRIVATE TOUR</a>
-            <a href="single tour" style="color:black;">SINGLE TOUR</a>
-            <a href="private" style="color:black;">PRIVATE TOUR POPUP</a>
-            <a href="tourlise"style="color:black;">TOURLIST</a>
-            <a href="tour expand"style="color:black;">TOURLIST EXPAND</a>
-            <a href="ecotour"style="color:black;">ECOTOUR</a>
+            <a href="destination.html"style="color:black;"> DESTINATION</a>
+            <a href="private-tour.html"style="color:black;">PRIVATE TOUR</a>
+            <a href="single-tour-page.html" style="color:black;">SINGLE TOUR</a>
+            <a href="private-tour-popup.html" style="color:black;">PRIVATE TOUR POPUP</a>
+            <a href="tour-list.html"style="color:black;">TOURLIST</a>
+            <a href="tour-list-expand.html"style="color:black;">TOURLIST EXPAND</a>
+            <a href="ecotour.html"style="color:black;">ECOTOUR</a>
             </div>
         </div>
 
