--- a/tour-list.html
+++ b/tour-list.html
@@ -262,7 +262,6 @@
             border: 0;
             border-width: 2px;
             box-shadow: 0 0 5px 2px #555353;
-
         }
 
         .r1>div:first-child {
@@ -501,7 +500,6 @@
         <div class="container">
             <div class="row1">
                 <div>
-
                     <label for="open">
                         <i class="fa-solid fa-bars"></i>
                     </label>
@@ -598,7 +596,8 @@
                                         and
                                         taste avocados, oranges, lemons, mangos, papayas, sapotes, guavas, passion
                                         fruit,
-                                        and many others types of fruit. +info</p>
+                                        and many others types of fruit. +info
+                                    </p>
                                 </div>
                             </div>
                             <div class="c4">
@@ -614,13 +613,15 @@
                                 </div>
                                 <div class="c6">
                                     <p><i class="fa-regular fa-file-lines fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Info</p>
+                                        style="color: #59d95b; margin:5px;"></i>Info
+                                    </p>
                                     <p><i class="fa-solid fa-images fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Photos</p>
+                                        style="color: #59d95b; margin:5px;"></i>Photos
+                                    </p>
                                     <p><i class="fa-solid fa-location-dot fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Map</p>
+                                        style="color: #59d95b; margin:5px;"></i>Map
+                                    </p>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -668,11 +669,14 @@
                                 </div>
                                 <div class="c6">
                                     <p><i class="fa-regular fa-file-lines fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Info</p>
+                                        style="color: #59d95b; margin:5px;"></i>Info
+                                    </p>
                                     <p><i class="fa-solid fa-images fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Photos</p>
+                                        style="color: #59d95b; margin:5px;"></i>Photos
+                                    </p>
                                     <p><i class="fa-solid fa-location-dot fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Map</p>
+                                        style="color: #59d95b; margin:5px;"></i>Map
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -721,11 +725,11 @@
                                 </div>
                                 <div class="c6">
                                     <p><i class="fa-regular fa-file-lines fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Info</p>
+                                        style="color: #59d95b; margin:5px;"></i>Info</p>
                                     <p><i class="fa-solid fa-images fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Photos</p>
+                                        style="color: #59d95b; margin:5px;"></i>Photos</p>
                                     <p><i class="fa-solid fa-location-dot fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Map</p>
+                                        style="color: #59d95b; margin:5px;"></i>Map</p>
                                 </div>
                             </div>
                         </div>
@@ -757,7 +761,8 @@
                                         and
                                         taste avocados, oranges, lemons, mangos, papayas, sapotes, guavas, passion
                                         fruit,
-                                        and many others types of fruit. +info</p>
+                                        and many others types of fruit. +info
+                                    </p>
                                 </div>
                             </div>
                             <div class="c4">
@@ -773,11 +778,11 @@
                                 </div>
                                 <div class="c6">
                                     <p><i class="fa-regular fa-file-lines fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Info</p>
+                                        style="color: #59d95b; margin:5px;"></i>Info</p>
                                     <p><i class="fa-solid fa-images fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Photos</p>
+                                        style="color: #59d95b; margin:5px;"></i>Photos</p>
                                     <p><i class="fa-solid fa-location-dot fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Map</p>
+                                        style="color: #59d95b; margin:5px;"></i>Map</p>
                                 </div>
                             </div>
                         </div>
@@ -809,7 +814,8 @@
                                         and
                                         taste avocados, oranges, lemons, mangos, papayas, sapotes, guavas, passion
                                         fruit,
-                                        and many others types of fruit. +info</p>
+                                        and many others types of fruit. +info
+                                    </p>
                                 </div>
                             </div>
                             <div class="c4">
@@ -825,11 +831,14 @@
                                 </div>
                                 <div class="c6">
                                     <p><i class="fa-regular fa-file-lines fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Info</p>
+                                        style="color: #59d95b; margin:5px;"></i>Info
+                                    </p>
                                     <p><i class="fa-solid fa-images fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Photos</p>
+                                        style="color: #59d95b; margin:5px;"></i>Photos
+                                    </p>
                                     <p><i class="fa-solid fa-location-dot fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Map</p>
+                                        style="color: #59d95b; margin:5px;"></i>Map
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -861,7 +870,8 @@
                                         and
                                         taste avocados, oranges, lemons, mangos, papayas, sapotes, guavas, passion
                                         fruit,
-                                        and many others types of fruit. +info</p>
+                                        and many others types of fruit. +info
+                                    </p>
                                 </div>
                             </div>
                             <div class="c4">
@@ -877,11 +887,14 @@
                                 </div>
                                 <div class="c6">
                                     <p><i class="fa-regular fa-file-lines fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Info</p>
+                                        style="color: #59d95b; margin:5px;"></i>Info
+                                    </p>
                                     <p><i class="fa-solid fa-images fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Photos</p>
+                                        style="color: #59d95b; margin:5px;"></i>Photos
+                                    </p>
                                     <p><i class="fa-solid fa-location-dot fa-lg"
-                                            style="color: #59d95b; margin:5px;"></i>Map</p>
+                                        style="color: #59d95b; margin:5px;"></i>Map
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -947,10 +960,12 @@
                     <img src="images/footlogo.avif" alt=""></img>
                     <p>Ecotour Barahona is your favourite specialist for authentic, unique and memorable round
                         trips,
-                        day trips and activites in Southwest of Dominican Republic.</p>
+                        day trips and activites in Southwest of Dominican Republic.
+                    </p>
                     <img src="images/footlogo2.avif" alt="">
                     <p>Travel environmentally friendly with us and discover the main destinations of the Dominican
-                        Republic.</p>
+                        Republic.
+                    </p>
                 </div>
                 <div>
                     <h3>ABOUT US</h3>
@@ -970,8 +985,7 @@
                 </div>
                 <div>
                     <h3>RESERVATIONS AND BOOKING</h3>
-                    <p>MONDAY TO FRIDAY from 8:00 am to 8:00 pm
-                    <p>
+                    <p>MONDAY TO FRIDAY from 8:00 am to 8:00 pm</p>
                     <p>SATURDAY TO SUNDAY from 9:00 am to 5:00 pm</p>
                     <p>Atlantic Standing Time +1(809) 856 2260</p>
                 </div>
