--- a/tour-list.html
+++ b/tour-list.html
@@ -74,11 +74,11 @@
         .bg>div a,
         .row1>div:last-child>button,
         .head p,
-        .head button,
+        .head button>a,
         .smlogo>div h3,
         .row2 p,
         .row2 h4,
-        .load>button h3,
+        .load>button a,
         .c7 p,
         .c7 h3 {
             font-family: sans-serif;
@@ -87,10 +87,10 @@
         .c7 p,
         .pad button,
         .picrow,
-        .load button,
+        .load>button a,
         .com:hover,
         .c1 button,
-        .head button,
+        .head>button a,
         .main,
         .bg>div a:hover {
             color: white;
@@ -181,7 +181,7 @@
 
         .head h2 {
             font-size: 3.5rem;
-            margin: 30px 0px;
+            margin: 30px 0px 25px 0px;
         }
 
         .main {
@@ -204,12 +204,17 @@
             background-size: cover;
             mix-blend-mode: screen;
         }
+        .head{
+            position: relative;
+        }
 
         .head button {
-            cursor: pointer;
-            padding: 10px 35px;
+            position: absolute;
+            z-index: 2;
+            bottom: -75px;
+            padding: 15px 25px;
             background-color: rgb(155 205 82);
-            border: 2px;
+            border: 0;
             font-size: medium;
         }
 
@@ -339,15 +344,17 @@
             text-align: center;
             padding: 50px;
         }
-
+      
         .load button {
-            width: 15%;
-            padding: 0px 10px;
+            width: 17%;
+            padding: 15px 12px;
             background-color: rgb(155 205 82);
             border: 0;
             cursor: pointer;
+            font-size: medium;
         }
 
+        
         main {
             padding: 30px 0px;
         }
@@ -532,7 +539,7 @@
             <div class="head">
                 <P>DISCOVER A HIDDEN PARADISE</P>
                 <h2>Our Travels</h2>
-                <button>Book Now</button>
+                <button><a href="index.html">book now</a></button>
             </div>
         </div>
     </div>
@@ -903,7 +910,9 @@
             </div>
             <div class="load">
                 <button>
-                    <h3>Load More</h3>
+                    <a href="tour-list-expand.html">
+                        load more
+                    </a>
                 </button>
             </div>
         </div>
@@ -948,7 +957,9 @@
             </div>
             <div class="load">
                 <button>
-                    <h3>Load More</h3>
+                    <a href="single-tour.html">
+                        load more
+                    </a>
                 </button>
             </div>
         </div>
