--- a/tour-list.html
+++ b/tour-list.html
@@ -968,12 +968,12 @@
         <div class="container">
             <div class="c7">
                 <div>
-                    <img src="images/footlogo.avif" alt=""></img>
+                    <img src="images/footlogo.webp" alt=""></img>
                     <p>Ecotour Barahona is your favourite specialist for authentic, unique and memorable round
                         trips,
                         day trips and activites in Southwest of Dominican Republic.
                     </p>
-                    <img src="images/footlogo2.avif" alt="">
+                    <img src="images/footlogo2.webp" alt="">
                     <p>Travel environmentally friendly with us and discover the main destinations of the Dominican
                         Republic.
                     </p>
