--- a/tour-list.html
+++ b/tour-list.html
@@ -525,12 +525,12 @@
     </header>
     <div class="bg">
         <div class="container">
-            <a href="index.html">home</a>
+            <a href="index.html">index</a>
             <a href="destination.html">destination</a>
             <a href="private-tour.html">private tour</a>
             <a href="private-tour-popup.html">private tour popup</a>
             <a href="tour-list-expand.html">tour expand</a>
-            <a href="single-tour.html">single tour</a>
+            <a href="single-tour-page.html">single tour</a>
             <a href="ecotour.html">ecotour</a>
         </div>
     </div>
@@ -957,7 +957,7 @@
             </div>
             <div class="load">
                 <button>
-                    <a href="single-tour.html">
+                    <a href="single-tour-page.html">
                         load more
                     </a>
                 </button>
