--- a/tour-list-expand.html
+++ b/tour-list-expand.html
@@ -31,7 +31,7 @@
         header {
             position: sticky;
             top: 0;
-            z-index: 1;
+            z-index: 2;
             background-color: white;
         }
 
@@ -43,8 +43,10 @@
             padding: 15px 0px;
             display: none;
             text-align: center;
+            position: sticky;
+            top: 90px;
+            z-index: 2;
         }
-
         .nav>div {
             display: flex;
             flex-wrap: wrap;
@@ -163,13 +165,10 @@
             left:0;
             mix-blend-mode: screen;
         }
-        .head{
-            position:relative;
-        }
+        
         .head button {
-            position:absolute;
+            position:relative;
             z-index: 1;
-            bottom:-60px;
             padding: 10px 50px;
             background-color: rgba(152, 205, 93);
             border: 0;
@@ -671,7 +670,7 @@
                     <div class="row">
                         <div class="r1">
                             <div>
-                                <img src="images/mountain.avif" alt="">
+                                <img src="images/mountain.webp" alt="">
                                 <div class="content style">
                                     <div>
                                         <h4><b>ROUTE</b>: Barahona - Paraiso</h4>
@@ -766,7 +765,7 @@
                     <div class="row">
                         <div class="r1" id="ex0">
                             <div>
-                                <img src="images/wave.avif" alt="">
+                                <img src="images/wave.webp" alt="">
                                 <div class="content0 style">
                                     <div>
                                         <h4><b>ROUTE</b>: Barahona - Paraiso</h4>
@@ -860,7 +859,7 @@
                     <div class="row">
                         <div class="r1" id="ex1">
                             <div>
-                                <img src="images/sunset2.avif" alt="">
+                                <img src="images/sunset2.webp" alt="">
                                 <div class="content1 style">
                                     <div>
                                         <h4><b>ROUTE</b>: Barahona - Paraiso</h4>
@@ -954,7 +953,7 @@
                     <div class="row">
                         <div class="r1" id="ex2">
                             <div>
-                                <img src="images/forest.avif" alt="">
+                                <img src="images/forest.webp" alt="">
                                 <div class="content2 style">
                                     <div>
                                         <h4><b>ROUTE</b>: Barahona - Paraiso</h4>
@@ -1048,7 +1047,7 @@
                     <div class="row">
                         <div class="r1" id="ex3">
                             <div>
-                                <img src="images/boat.avif" alt="">
+                                <img src="images/boat.webp" alt="">
                                 <div class="content3 style">
                                     <div>
                                         <h4><b>ROUTE</b>: Barahona - Paraiso</h4>
@@ -1147,7 +1146,7 @@
         <div class="featurebox">
             <h2>Featured Travel Experience</h2>
             <div class="picrow">
-                <div style="background-image: url(images/photo-1607992922515-7e38329e65d4.avif); height: 400px;">
+                <div style="background-image: url(images/photo-1607992922515-7e38329e65d4.webp); height: 400px;">
                     <div>
                         <div class="pad">
                             <h2>Garden of Eden</h2>
@@ -1160,7 +1159,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="background-image: url(images/photo-1613706903647-77e255eff994.avif);">
+                <div style="background-image: url(images/photo-1613706903647-77e255eff994.webp);">
                     <div>
                         <div class="pad">
                             <h2>Untouched Paradise</h2>
@@ -1170,7 +1169,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="background-image: url(images/photo-1621157281974-e926449624e3.avif);">
+                <div style="background-image: url(images/photo-1621157281974-e926449624e3.webp);">
                     <div>
                         <div class="pad">
                             <h2>Cloud Forest Mountain</h2>
