--- a/single-tour-page.html
+++ b/single-tour-page.html
@@ -598,6 +598,9 @@
                 width:10%;
                 font-size: 20px;
             }
+            .row1>div:nth-child(2){
+                width:30px;
+            }
             .row1>div:last-child{
                 width:40%;
             }
@@ -670,6 +673,9 @@
             left: 75%;
             width: 15%;
             font-weight: bold;
+        }
+        .menusection {
+            top:63px;
         }
         }
     </style>
