--- a/destination.html
+++ b/destination.html
@@ -19,13 +19,13 @@
 
         }
 
+        body {
+            margin: 0;
+        }
+
         img {
             max-width: 100%;
             height: auto;
-        }
-
-        body {
-            margin: 0;
         }
 
         .box {
@@ -40,9 +40,12 @@
             background-color: white;
         }
 
-        .row1 {
+        .flexed {
             display: flex;
             flex-wrap: wrap;
+        }
+
+        .row1 {
             justify-content: space-between;
             align-items: center;
             padding: 15px 0;
@@ -57,8 +60,8 @@
             text-decoration: none;
             cursor: pointer;
             font-variant: small-caps;
-            font-family: funer;
             padding: 0px 20px;
+            font-family: funer;
         }
 
         .nav {
@@ -71,9 +74,7 @@
         }
 
         .nav>div {
-            display: grid;
-            grid-template-columns: repeat(4, 15%);
-            justify-content: space-evenly;
+            justify-content: space-between;
         }
 
         .nav a {
@@ -81,7 +82,9 @@
             font-size: large;
             display: block;
             font-weight: 400;
-            font-size: 1.3rem;
+            font-size: 1.1rem;
+            padding: 15px 0;
+            font-family: sans-serif;
         }
 
         .nav a:hover {
@@ -103,21 +106,17 @@
             display: block;
         }
 
-        label[for="open"] {
-            cursor: pointer;
-            font-size: 2rem;
-        }
-
+        label[for="open"],
         label[for="exit"] {
             cursor: pointer;
-            font-size: 1.5rem;
+            font-size: 2rem;
         }
 
         /************************menubar-end******************************* */
         .call>a {
             border: rgb(162 205 93) 1px solid;
             background-color: white;
-            font-size: medium;
+            font-size: 1rem;
             font-weight: 600;
             color: rgb(100 78 60);
 
@@ -129,21 +128,22 @@
         }
 
         .main {
-            background-image: url(images/header-bg.avif);
+            background-image: url(images/header-bg.webp);
             background-size: cover;
             height: 50vh;
             position: relative;
             color: white;
         }
 
-        .main::before {
+        .main::after {
             content: '';
             position: absolute;
-            height: 100%;
+            height: 50vh;
             width: 100%;
             top: 0;
             left: 0;
-            background-image: url(images/splash12.avif);
+            background-image: url(images/splash21.webp);
+            /* background-size: cover; */
             background-position: bottom;
             mix-blend-mode: screen;
 
@@ -258,10 +258,9 @@
         }
 
         .sec4 {
-            background-image: url(images/bootsky.avif);
-            height: 70vh;
+            background-image: url(images/bootsky.webp);
+            height: 550px;
             background-size: cover;
-            display: flex;
             align-items: center;
             margin-bottom: 50px;
             color: white;
@@ -276,7 +275,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url(images/both.avif);
+            background-image: url(images/both.webp);
             background-size: cover;
             mix-blend-mode: screen;
         }
@@ -309,8 +308,8 @@
         }
 
         .sec6 {
-            background-image: url(images/cloud1.avif);
-            height: 80vh;
+            background-image: url(images/cloud1.webp);
+            height: 600px;
             background-size: cover;
             position: relative;
         }
@@ -318,7 +317,7 @@
         .sec6::before {
             content: '';
             position: absolute;
-            background-image: url(images/splash21.avif);
+            background-image: url(images/splash12.webp);
             background-size: cover;
             background-position: top;
             left: 0;
@@ -330,7 +329,7 @@
         }
 
         .sec6>div {
-            height: 80vh;
+            height: 550px;
             display: grid;
             grid-template-columns: repeat(2, 50%);
             align-items: center;
@@ -354,12 +353,12 @@
             padding: 0;
             margin: 0;
             list-style: none;
-            display: flex;
             justify-content: end;
         }
 
         .sec6 a {
             color: white;
+            font-weight: 600;
             background-color: rgb(155 205 82);
         }
 
@@ -376,22 +375,18 @@
         }
 
         .sec7>div {
-            width: 50%;
+            width: 60%;
             margin: auto;
-            display: grid;
-            grid-template-columns: 50% 30%;
             justify-content: space-between;
             align-items: center;
         }
 
-        .sec7>div>div:last-child {
-            text-align: end;
+        .sec7>div img {
+            margin-right: 15px;
         }
 
-        .sec7>div>div:first-child {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
+        .sec7>div>div:last-child {
+            text-align: end;
         }
 
         .sec7 h3 {
@@ -418,13 +413,13 @@
             font-family: funer;
             line-height: 1.5;
             position: relative;
-            padding: 100px 0;
+            padding: 70px 0;
         }
 
         footer::before {
             content: '';
             position: absolute;
-            background-image: url(images/footer.avif);
+            background-image: url(images/footer.webp);
             background-size: cover;
             left: 0;
             top: 0;
@@ -436,16 +431,17 @@
 
         footer>div {
             display: grid;
-            grid-template-columns: repeat(5, 17%);
+            grid-template-columns: repeat(5, 14%);
             justify-content: space-between;
         }
 
         footer p {
             color: white;
-            font-size: small;
+            font-size: x-small;
         }
 
         footer h4 {
+            margin: 11px 0;
             color: rgb(176 218 106);
         }
 
@@ -457,12 +453,155 @@
         }
 
         footer li {
-            padding: 10px 0;
+            font-size: 0.9rem;
+            padding: 6px 0;
         }
 
         footer i {
             margin-right: 10px;
             color: white;
+        }
+
+        @media (max-width:992px) {
+            html {
+                font-size: 14px;
+            }
+
+            .row1>div:first-child {
+                width: 10%;
+            }
+
+            .row1>div:nth-child(2) {
+                width: 40%;
+            }
+
+            .row1>div:nth-child(3) {
+                width: 30%;
+
+            }
+
+            .sec1,
+            .sec7>div,
+            .sec4>div {
+                width: 70%;
+            }
+
+            .nav>div li {
+                width: 50%;
+
+            }
+
+            .nav a {
+                text-align: left;
+            }
+
+            .sec3 h3 {
+                grid-column: span 1;
+            }
+
+            .sec3>div,
+            .sec5,
+            .sec6>div {
+                grid-template-columns: 100%;
+                row-gap: 20px;
+            }
+
+            .sec6>div {
+                height: 600px;
+            }
+
+            .sec6>div>div:first-child {
+                left: 0;
+            }
+
+            .sec7 {
+                padding: 50px 0 20px;
+            }
+
+            .sec7>div>div:first-child {
+                width: 100%;
+                margin-bottom: 30px;
+            }
+
+            footer>div {
+                grid-template-columns: repeat(2, 45%);
+                row-gap: 50px;
+            }
+
+            footer>div>div:first-child {
+                grid-column: span 2;
+            }
+        }
+
+        @media (max-width:768px) {
+            html {
+                font-size: 12px;
+            }
+
+            .row1>div:first-child {
+                width: 10%;
+            }
+
+            .row1>div:nth-child(2) {
+                width: 40%;
+            }
+
+            .row1>div:nth-child(3) {
+                width: 30%;
+
+            }
+
+            .main {
+                background-position: center;
+            }
+
+            .sec1,
+            .sec7>div,
+            .sec4>div {
+                width: 70%;
+            }
+
+            .nav>div li {
+                width: 50%;
+
+            }
+
+            .nav a {
+                text-align: left;
+            }
+
+            .sec3 h3 {
+                grid-column: span 1;
+            }
+
+            .sec3>div,
+            .sec5,
+            .sec6>div {
+                grid-template-columns: 100%;
+                row-gap: 20px;
+            }
+
+            .sec6>div>div:first-child {
+                left: 0;
+            }
+
+            .sec7 {
+                padding: 50px 0 20px;
+            }
+
+            .sec7>div>div:first-child {
+                width: 100%;
+                margin-bottom: 30px;
+            }
+
+            footer>div {
+                grid-template-columns: repeat(2, 45%);
+                row-gap: 50px;
+            }
+
+            footer>div>div:first-child {
+                grid-column: span 2;
+            }
         }
 
         @media (max-width:576px) {
@@ -483,13 +622,14 @@
                 width: 100%;
             }
 
-            .nav>div {
-                grid-template-columns: repeat(2, 1fr);
+            .nav>div li {
+                width: 50%;
 
             }
 
             .nav a {
-                font-size: 2rem;
+                font-size: 1.5rem;
+                text-align: left;
             }
 
             .main {
@@ -510,8 +650,7 @@
 
             .sec3>div,
             .sec5,
-            .sec6>div,
-            .sec7>div {
+            .sec6>div {
                 grid-template-columns: 100%;
                 row-gap: 20px;
             }
@@ -528,8 +667,14 @@
                 padding: 50px 0 20px;
             }
 
+            .sec7>div>div:first-child {
+                width: 100%;
+                margin-bottom: 30px;
+            }
+
             footer>div {
                 grid-template-columns: repeat(2, 45%);
+                row-gap: 30px;
             }
 
             footer>div>div:first-child {
@@ -544,28 +689,31 @@
         <!-- ****************menubar-start***************** -->
         <input type="radio" id="open" name="v1">
         <input type="radio" id="exit" name="v1">
-        <div class="row1 box">
+        <div class="row1 box flexed">
             <div>
                 <label for="open">
                     &#x2630
                 </label>
                 <label for="exit">
-                    <i class="fa-solid fa-x"></i>
+                    &#x2630
                 </label>
             </div>
             <div>
                 <img src="images/logoETB-1.webp" alt="">
             </div>
             <div class="call">
-                <a href="#call"><i class="fa-solid fa-phone"></i>&emsp;get in touch</a>
+                <a href="#call"><i class="fa-solid fa-phone" style="margin-right: 10px;"></i>get in touch</a>
             </div>
         </div>
         <ul class="nav">
-            <div>
+            <div class="box flexed">
                 <li><a href="index.html">home page</a></li>
-                <li><a href="private-tour.html">private tours</a></li>
-                <li><a href="tour-list-expand.html">tour list</a></li>
+                <li><a href="private-tour.html">private tour</a></li>
+                <li><a href="private-tour-popup.html">private tour popup</a></li>
+                <li><a href="tour-list.html">tour list</a></li>
+                <li><a href="tour-list-expand.html">tour expand</a></li>
                 <li><a href="single-tour-page.html">single tour</a></li>
+                <li><a href="ecotour.html">ecotour</a></li>
             </div>
         </ul>
         <!-- ****************menubar-end***************** -->
@@ -590,9 +738,9 @@
         </p>
     </div>
     <div class="sec2">
-        <div><img src="images/r1.avif" alt=""></div>
-        <div><img src="images/r2.avif" alt=""></div>
-        <div><img src="images/r3.avif" alt=""></div>
+        <div><img src="images/r1.webp" alt=""></div>
+        <div><img src="images/r2.webp" alt=""></div>
+        <div><img src="images/r3.webp" alt=""></div>
     </div>
     <div class="sec3">
         <div class="box">
@@ -621,7 +769,7 @@
                 </p>
             </div>
             <div>
-                <img src="images/map.avif" alt="">
+                <img src="images/map.webp" alt="">
                 <div class="overlap">
                     <div>
                         <img src="images/maping.png" alt="">
@@ -639,7 +787,7 @@
             </div>
         </div>
     </div>
-    <div class="sec4">
+    <div class="sec4 flexed">
         <div>
             <h3>The varied climate, geography, as well as plants and fauna found in the counrtry should not only attract
                 you to visit, but invite you to explore...</h3>
@@ -683,19 +831,19 @@
                     <h4>Discover the original southwest of the Dominican Republic and Haiti with Ecotour Barahona.
                     </h4>
                 </div>
-                <ul>
+                <ul class="flexed">
                     <li><a href="tour-list-expand.html">show all our tours</a></li>
                 </ul>
             </div>
             <div class="imge">
-                <img src="images/beach.avif" alt="" style="width: 100%;">
+                <img src="images/beach.webp" alt="" style="width: 100%;">
             </div>
         </div>
     </div>
     <div class="sec7">
-        <div>
-            <div>
-                <div> <img src="images/col.avif" alt=""></div>
+        <div class="flexed">
+            <div class="flexed">
+                <div> <img src="images/col.webp" alt=""></div>
                 <div>
                     <h3>Book Now</h3>
                     <h4>Lorem ipsum dolor sit</h4>
@@ -709,10 +857,10 @@
     <footer>
         <div class="box">
             <div>
-                <img src="images/footlogo.avif" alt="">
+                <img src="images/footlogo.webp" alt="">
                 <p>Ecotour barahona is our favorite specialist for authrntic unique and memorable day ups and trips of
                     activities in southern dominican republic.</p>
-                <img src="images/footlogo2.avif" alt="">
+                <img src="images/footlogo2.webp" alt="">
                 <p>Travel environmental friendly with us and discover the main dimensions of dominican republic</p>
             </div>
             <div>
