--- a/private-tour-popup.html
+++ b/private-tour-popup.html
@@ -144,7 +144,7 @@
         font-variant: small-caps;
         font-size: 1.1rem;
         font-family: sans-serif;
-        padding: 20px;
+        padding: 10px;
     }
 
     section>ul>li>a:hover {
@@ -172,7 +172,7 @@
     /* section2 */
 
     .section2 {
-        background-image: url('images/boat.webp');
+        background-image: url('images/eco_boat.webp');
         display: grid;
         color: white;
         height: 300px;
@@ -262,7 +262,7 @@
     .blackbg::after {
 
         content: '';
-        background-image: url('images/both.avif');
+        background-image: url('images/both.webp');
         position: absolute;
         background-size: cover;
         top: 0;
@@ -443,7 +443,7 @@
     }
 
     .head3b {
-        background-image: url('images/boat.avif');
+        background-image: url('images/eco_boat.webp');
         display: flex;
         align-items: end;
         background-size: cover;
@@ -644,7 +644,7 @@
 
     .section8::after {
         content: '';
-        background-image: url('images/footer.avif');
+        background-image: url('images/footer.webp');
         position: absolute;
         background-size: cover;
         top: 0;
@@ -833,12 +833,14 @@
     </header>
     <section class="menusection">
         <ul class="menu">
-            <li><a href="index.html">home</a></li>
+            <li><a href="home-page.html">home</a></li>
             <li><a href="destination.html">destination</a></li>
             <li><a href="private-tour.html">private tour</a></li>
             <li><a href="private-tour-popup.html">private_tour_popup</a></li>
             <li><a href="tour-list.html">tour_list</a></li>
             <li><a href="tour-list-expand.html">tour expand</a></li>
+            <li><a href="ecotour.html">ecotour</a></li>
+            <li><a href="single-tour-page.html">single tour</a></li>
         </ul>
     </section>
     <section class="section2">
@@ -1116,10 +1118,10 @@
         <div class="inside">
             <div class="footer">
                 <div class="footer1">
-                    <img src="images/footlogo.avif" alt="footlogo">
+                    <img src="images/footlogo.webp" alt="footlogo">
                     <p>Ecotour Barahona is your favourite specialist for authentic, unique and memorable round trips,
                         day trips and actvities in Southwest of Dominican Republic.</p>
-                    <img src="images/footlogo2.avif" alt="footlogo2">
+                    <img src="images/footlogo2.webp" alt="footlogo2">
                     <p>Travel environmentally friendly with us and discover the main destinations of Dominican Republic.
                     </p>
                 </div>
@@ -1168,7 +1170,7 @@
                             <i class="fa-brands fa-instagram"></i>
                         </div>
                         <div>
-                            <img src="images/whitelogo3.png" alt="whitelogo3" width="25px">
+                            <img src="images/whitelogo3.webp" alt="whitelogo3" width="25px">
                         </div>
                     </div>
                 </div>
