--- a/tour-list.html
+++ b/tour-list.html
@@ -522,7 +522,7 @@
     </header>
     <div class="bg">
         <div class="container">
-            <a href="index.html">index</a>
+            <a href="index.html">home page</a>
             <a href="destination.html">destination</a>
             <a href="private-tour.html">private tour</a>
             <a href="private-tour-popup.html">private tour popup</a>
