nav bar tab changed

--- a/private-tour-popup.html
+++ b/private-tour-popup.html
@@ -833,7 +833,7 @@
     </header>
     <section class="menusection">
         <ul class="menu">
-            <li><a href="home-page.html">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="destination.html">destination</a></li>
             <li><a href="private-tour.html">private tour</a></li>
             <li><a href="private-tour-popup.html">private_tour_popup</a></li>
