--- a/private-tour.html
+++ b/private-tour.html
@@ -264,7 +264,7 @@
             background-size: cover;
             position: absolute;
             width: 100%;
-            height: 83vh;
+            height: 100%;
             left: 0;
             top: 0;
             mix-blend-mode: screen;
