--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home_page</title>
-
     <style>
         @font-face {
             font-family: font;
@@ -37,6 +35,10 @@
             z-index: 1;
         }
 
+        header a {
+            text-decoration: none;
+        }
+
         .bg {
             background-color: rgba(152, 205, 93);
             display: none;
@@ -60,10 +62,6 @@
             color: white;
         }
 
-        header a {
-            text-decoration: none;
-        }
-
         .row1 {
             display: flex;
             flex-wrap: wrap;
@@ -74,13 +72,6 @@
 
         .row1>div {
             width: 30%;
-        }
-
-        label[for="open"],
-        label[for="exit"] {
-            cursor: pointer;
-            font-size: 2rem;
-            font-weight: bold;
         }
 
         .fa-phone:before {
@@ -98,7 +89,26 @@
             color: rgb(100, 78, 60);
         }
 
-        .row1>div:last-child {
+        label[for="open"],
+        label[for="exit"] {
+            cursor: pointer;
+            font-size: 2rem;
+            font-weight: bold;
+        }
+
+        header input,
+        [for="exit"],
+        #open:checked~.container [for="open"] {
+            display: none;
+        }
+
+        #open:checked~.bg,
+        #open:checked~.container [for="exit"] {
+            display: block;
+        }
+
+        .row1>div:last-child,
+        .sec>div>div:first-child>div>div {
             text-align: right;
         }
 
@@ -207,10 +217,6 @@
             padding-left: 20px;
         }
 
-        .sec>div>div:first-child>div>div {
-            text-align: right;
-        }
-
         .sec>div>div:first-child>div button {
             padding: 12px 30px;
             background-color: rgb(152, 205, 93);
@@ -243,7 +249,7 @@
             grid-template-columns: 32% 32% 32%;
             justify-content: space-between;
             margin: 45px 0px;
-            cursor: pointer;
+            cursor: url('images/cursor.webp'), pointer;
         }
 
         .mainrow>div {
@@ -265,14 +271,9 @@
             padding-top: 20rem;
         }
 
-        .common:hover {
-            background-color: rgba(0, 0, 0, 0.7);
-            height: 278px;
-        }
-
+        .common:hover,
         .mid:hover {
             background-color: rgba(0, 0, 0, 0.7);
-            height: 427px;
         }
 
         .common h2,
@@ -335,7 +336,7 @@
 
         .foot1,
         .twocols,
-        .container1,
+        .booking,
         .lstrow {
             display: flex;
             flex-wrap: wrap;
@@ -369,7 +370,7 @@
             padding: 0px 20px;
         }
 
-        .container1 {
+        .booking {
             width: 50%;
             margin: auto;
         }
@@ -379,25 +380,25 @@
             padding: 10px 0px;
         }
 
-        .container1>div {
+        .booking>div {
             width: 50%;
             color: white;
             padding: 50px 0px;
         }
 
-        .container1>div:first-child {
+        .booking>div:first-child {
             display: grid;
             grid-template-columns: 20% 80%;
             align-items: center;
         }
 
-        .container1>div:first-child span {
+        .booking>div:first-child span {
             font-family: font;
             color: rgb(10, 84, 10);
             font-size: 26px;
         }
 
-        .container1>div button {
+        .booking>div button {
             padding: 7px 23px;
             background-color: white;
             border: 0;
@@ -462,20 +463,6 @@
 
         }
 
-        header input,
-        [for=exit] {
-            display: none;
-        }
-
-        #open:checked~.container [for=open] {
-            display: none;
-        }
-
-        #open:checked~.bg,
-        #open:checked~.container [for=exit] {
-            display: block;
-        }
-
         @media(max-width:576px) {
             html {
                 font-size: 12px;
@@ -518,7 +505,7 @@
                 left: 0;
             }
 
-            .container1>div:first-child {
+            .booking>div:first-child {
                 grid-template-columns: 100%;
             }
 
@@ -531,15 +518,15 @@
                 padding-bottom: 20px;
             }
 
-            .container1>div:first-child span {
+            .booking>div:first-child span {
                 font-size: 1.5rem;
             }
 
-            .container1>div button {
+            .booking>div button {
                 margin: 0 0px 20px;
             }
 
-            .container1>div {
+            .booking>div {
                 width: 100%;
                 padding: 0;
             }
@@ -575,7 +562,7 @@
                 <a href="private-tour-popup.html">private tour popup</a>
                 <a href="tour-list.html">tour list</a>
                 <a href="tour-list-expand.html">tour expand</a>
-                <a href="single-tour.html">single tour</a>
+                <a href="single-tour-page.html">single tour</a>
                 <a href="ecotour.html">ecotour</a>
             </div>
         </div>
@@ -639,13 +626,13 @@
                     <div style="background: url(images/imag2.webp);background-size: cover;">
                         <div class="common">
                             <h2>Horseback Riding</h2>
-                            <div><button>$90</button></div>
+                            <div><button>$60</button></div>
                         </div>
                     </div>
                     <div style="background: url(images/imag3.webp);background-size: cover;">
                         <div class="common">
-                            <h2>Horseback Riding</h2>
-                            <div><button>$35</button></div>
+                            <h2>Blue Jewel Mine</h2>
+                            <div><button>$99</button></div>
                         </div>
                     </div>
                 </div>
@@ -653,33 +640,33 @@
                     <div style="background: url(images/imgce1.webp);background-size: cover;">
                         <div class="mid">
                             <h2>Untouched paradise</h2>
-                            <div><button>$120</button></div>
+                            <div><button>$99</button></div>
                         </div>
                     </div>
                     <div style="background:url(images/imgce2.webp);background-size: cover;">
                         <div class="mid">
                             <h2>Flamingo Island</h2>
-                            <div><button>$90</button></div>
+                            <div><button>$105</button></div>
                         </div>
                     </div>
                 </div>
                 <div>
                     <div style="background: url(images/imag4.webp);background-size: cover;">
                         <div class="common">
-                            <h2>Horseback Riding</h2>
-                            <div><button>$60</button></div>
+                            <h2>Cloud Forest Mountain</h2>
+                            <div><button>$105</button></div>
                         </div>
                     </div>
                     <div style="background: url(images/imag7.webp);background-size: cover;">
                         <div class="common">
-                            <h2>Horseback Riding</h2>
-                            <div><button>$60</button></div>
+                            <h2>Lake Enriquillo</h2>
+                            <div><button>$119</button></div>
                         </div>
                     </div>
                     <div style="background: url(images/imag6.webp);background-size: cover;">
                         <div class="common">
-                            <h2>Horseback Riding</h2>
-                            <div><button>$60</button></div>
+                            <h2>Bahia de lasAguilas &Larimar</h2>
+                            <div><button>$295</button></div>
                         </div>
                     </div>
                 </div>
@@ -730,7 +717,7 @@
         </div>
     </article>
     <div class="bgcolor">
-        <div class="container1">
+        <div class="booking">
             <div>
                 <div>
                     <img src="images/col.webp" alt="">
